# hexalyzer

./: .gitignore  Cargo.toml  README.md  bench.sh
hexalyzer/: Cargo.toml  build.rs
hexalyzer/assets/: hexalyzer.afdesign  icon.icns
hexalyzer/docs/: icon.icns  icon.rgba
hexalyzer/src/: address.rs  app.rs  byteedit.rs  events.rs  loader.rs  main.rs  selection.rs  ui_button.rs  ui_centralpanel.rs  ui_filedrop.rs  ui_inspector.rs  ui_jumpto.rs  ui_menubar.rs  ui_popup.rs  ui_scrollarea.rs  ui_search.rs  ui_sidepanel.rs  ui_tabs.rs
hexalyzer/test/: Untitled.hex  testih.hex
hexalyzer/utils/: make_icons.sh
hexviewer/: Cargo.toml
hexviewer/src/: address.rs  app.rs  byteedit.rs  dragandrop.rs  editor.rs  error.rs  events.rs  hexviewer.rs  loader.rs  main.rs  selection.rs  topbar.rs  ui_button.rs  ui_centralpanel.rs  ui_error.rs  ui_events.rs  ui_fileinfo.rs  ui_inspector.rs  ui_jumpto.rs  ui_menubar.rs  ui_popup.rs  ui_scrollarea.rs  ui_search.rs  ui_sidepanel.rs  ui_topbar.rs  ui_workspace.rs  update.rs  utils.rs  workspace.rs
hexviewer/test/: ih2.hex  test-2.hex  test1.hex  test3.hex
intelhex/src/: error.rs  intelhex.rs  lib.rs  record.rs
intelhex/tests/: integration.rs  integration_tests.rs
intelhexlib/: Cargo.toml
intelhexlib/benches/: benchmark.rs  createbin.sh
intelhexlib/src/: error.rs  intelhex.rs  lib.rs  record.rs
intelhexlib/tests/: integration_tests.rs
src/: main.rs
src/lib/: ih.rs
tests/: integration.rs
