[package]
name = "hexalyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe.workspace = true
rfd.workspace = true
intelhexlib.workspace = true

[package.metadata.packager]
product_name = "Hexalyzer"
identifier = "com.github.iharhl.hexalyzer"
description = "IntelHex viewer and editor app"
authors = ["Ihar Hlukhau | ihluk@outlook.com"]
copyright = "Copyright © 2026"
icons = ["assets/icon.icns", "assets/icon.ico", "assets/full_icon_128x128.png"]

[package.metadata.packager.nsis]
installer_mode = "perMachine"